# ese5190-2022-lab2b-esp

./: README.md
lab/01_registers/: CMakeLists.txt  README.md  lab1.c
lab/02_repl/: CmakeLists.txt  README.md  lab2.c  neopixel.c
lab/03_sequencer/: CMakeLists.txt  README.md  lab3.c  neopixel.c  neopixel.h  sequencer.c  sequencer.h
lab/04_slow_motion/: CMakeLists.txt  README.md  lab4.c  lab4.py  values.txt
lab/05_i2c_traffic/: CMakeLists.txt  README.md  lab5.c
lab/06_pioscope/: CMakeLists.txt  README.md  fireFlyLab1.py  lab6.c  ws2812.c
lab/07_pio_sequencer/: README.md  values.txt
lab/08_adps_protocol/: README.md  lab8.c  ws2812.h
lab/09_lab_on_a_chip/: CMakeLists.txt  apds_registers.h  i2c.pio  i2cbackup.pio  pio_i2c.c  registers.h  ws2812.c
lab/10_protoboard/: CMakeLists.txt  README.md  lab10.c  pio_i2c.h
